# tasktracker

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SPEC.md
resources/: .gitignore-tt  agent-rules-example.md  git-hook-pre-commit  tt-skill.md  tt.bash-completion  tt.md
src/: constants.rs  error.rs  main.rs
src/cli/: add.rs  archive.rs  artifacts.rs  dependencies.rs  dump.rs  edit.rs  focus.rs  graph.rs  init.rs  install.rs  list.rs  mcp.rs  mod.rs  ordering.rs  paths.rs  restore.rs  show.rs  split.rs  target.rs  workflow.rs
src/core/: graph.rs  mod.rs  models.rs  operations.rs  ordering.rs  state.rs  target.rs
src/db/: artifacts.rs  config.rs  connection.rs  dependencies.rs  mod.rs  schema.rs  tasks.rs
src/mcp/: mod.rs  server.rs  tests.rs  tools.rs  transport.rs
